--- a/style.css
+++ b/style.css
@@ -4,7 +4,11 @@ body{
 margin: 0;
 padding: 0;
 }
-
+.tela-app{
+    background-color: #000;
+    box-shadow: 5px 5px 5px 5px#0000001a;
+    margin: 10px;
+}
 .iphone-14-plus-7 { 
 align-items: center; background-color: #fff;
 display: flex;
@@ -17,25 +21,18 @@ width: 100%;
 pointer-events: none;
 visibility: hidden;
 }
-.rectangle-34 {
-background-color: var(--white);
-border-radius: 20px;
-box-shadow: 5px 5px 5px 5px#0000001a;
-height: 150px;
-margin-right: 1px;
-margin-top: 9px;
-width: 80%;
-}
 .rectangle-34 img{
 width: 100%;
-min-height: 150px;
+min-height: auto;
 border-radius: 20px;
+box-shadow: 0px 4px 4px #00000040;
+
 }
 .no-despreze-a-sua-m {
 letter-spacing: 0;
 line-height: normal;
 margin-left: 1px;
-margin: 80px 0 10px 0px;
+margin: 30px 0 10px 0px;
 min-height: auto;
 text-align: center;
 font-family: 'Playball', cursive;
@@ -51,8 +48,8 @@ flex-direction: column;
 gap: 20px;
 margin-left: 1px;
 min-height: auto;
-padding: 35px 51px;
-width: 50%;
+padding: 35px 0px;
+width: 100%;
 }
 .overlap-group3 {
 align-items: flex-end; align-self: center;
@@ -94,7 +91,8 @@ display: flex;
 gap: 45px;
 height: auto;
 margin: 35px 0 8px 0;
-padding: 10px;
+padding: 10px; 
+justify-content: center;
 }
 .clipboard-list {
 height: 50px; 
@@ -160,7 +158,9 @@ margin-left: 60px;
 margin-top: 30px;
 min-height: auto;
 }
-
+.container_proprietario{
+    width: 100%;
+}
 iframe{
     margin-top: 80px;
 }
@@ -244,3 +244,34 @@ margin-bottom: 60px;
   button[type="submit"]:hover {
     background-color:#25D366;
   }
+
+  /*carrocel*/
+
+
+  .caroussel {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+  }
+  .carousel-inner {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .banner_rolate {
+    width: 100%;
+    height: 200px;
+    margin: 10px;
+    box-shadow: 4px 3px 8px #333;
+    flex: 0 0 100%;
+  }
+  
+  @keyframes scrollCarrossel {
+    0% {
+      transform: translateX(0); /* Inicia a partir da posição inicial */
+    }
+    100% {
+      transform: translateX(-100%); /* Move para a esquerda */
+    }
+  }
+
