--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ margin: 0;
 padding: 0;
 }
 .tela-app{
-    background-color: #000;
+    background-color: #fff;
     box-shadow: 5px 5px 5px 5px#0000001a;
     margin: 10px;
 }
@@ -14,7 +14,9 @@ align-items: center; background-color: #fff;
 display: flex;
 flex-direction: column;
 width: 100%;
-
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
 }
 .hidden,
 .hidden * {
@@ -26,7 +28,7 @@ width: 100%;
 min-height: auto;
 border-radius: 20px;
 box-shadow: 0px 4px 4px #00000040;
-
+margin-top: 20px;
 }
 .no-despreze-a-sua-m {
 letter-spacing: 0;
@@ -274,4 +276,3 @@ margin-bottom: 60px;
       transform: translateX(-100%); /* Move para a esquerda */
     }
   }
-
