--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@
 body{
 margin: 0;
 padding: 0;
+overflow-x: hidden;
 }
 .tela-app{
     background-color: #fff;
     box-shadow: 5px 5px 5px 5px#0000001a;
-    margin: 10px;
     height: 100vh;
 }
 .iphone-14-plus-7 { 
@@ -87,6 +87,7 @@ min-width: 100%;
 text-align: center;
 }
 .overlap-group2 {
+  width: 100%;
 align-items: flex-start;
 background-color: #e9e9e9;
 border-radius: 40px;
@@ -95,8 +96,11 @@ display: flex;
 gap: 45px;
 height: auto;
 margin: 35px 0 8px 0;
-padding: 10px; 
+padding: 10px 0; 
 justify-content: center;
+position: absolute;
+bottom: 0;
+
 }
 .clipboard-list {
 height: 50px; 
