--- a/style.css
+++ b/style.css
@@ -29,12 +29,14 @@ height: 100vh;
 pointer-events: none;
 visibility: hidden;
 }
+
 .rectangle-34 img{
 width: 100%;
 min-height: auto;
 border-radius: 20px;
 box-shadow: 0px 4px 4px #00000040;
 margin-top: 20px;
+max-height: 50vh;
 }
 .no-despreze-a-sua-m {
 letter-spacing: 0;
