--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ align-items: center; background-color: #fff;
 display: flex;
 flex-direction: column;
 width: 100%;
+background-image: url('img/fundo-app.png');
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
@@ -22,7 +23,8 @@ height: 100vh;
 }
 #versao{ 
   font-size: 11px;
-  margin: -10px 0 -10px -100px;
+  margin: -10px 0 -10px -170px;
+  color: #c7c7c7;
 }
 .hidden,
 .hidden * {
@@ -30,8 +32,9 @@ pointer-events: none;
 visibility: hidden;
 }
 
-.rectangle-34 img{
+.rectangle-34{
 width: 100%;
+height: 200px;
 min-height: auto;
 border-radius: 20px;
 box-shadow: 0px 4px 4px #00000040;
@@ -42,11 +45,13 @@ max-height: 50vh;
 letter-spacing: 0;
 line-height: normal;
 margin-left: 1px;
-margin: 30px 0 10px 0px;
+margin: 100px 0 10px 0px;
 min-height: auto;
 text-align: center;
 font-family: 'Playball', cursive;
-
+font-size: 18px;
+color: #fff;
+text-shadow: 1px 1px 4px #000;
 }
 .overlap-group {
 align-items: flex-end;
@@ -63,7 +68,7 @@ width: 100%;
 }
 .overlap-group3 {
 align-items: flex-end; align-self: center;
-background-color:#eb3223;
+background-color:#D3A92E;
 color: #fff;
 box-shadow: 0px 4px 4px #80008840;
 display: flex;
@@ -71,8 +76,9 @@ padding: 8px 10px;
 font-size: 11px;
 }
 .overlap-group3:hover {
-background-color:#ff7b00;
+background-color: #d37e2e;
 transform: scale(1.05);
+box-shadow: 2px 2px 10px #fff;
 }
 .acessar {
 color: var(--white);
@@ -91,22 +97,25 @@ line-height: normal;
 min-height: 27px;
 min-width: 100%;
 text-align: center;
+color: #fff;
 }
 .overlap-group2 {
   width: 100%;
 align-items: flex-start;
-background-color: #e9e9e9;
+background-color: tr;
 border-radius: 40px;
 box-shadow: 0px 4px 4px #00000840;
 display: flex;
 gap: 45px;
 height: auto;
 margin: 35px 0 8px 0;
-padding: 10px 0; 
+padding: 15px 0; 
 justify-content: center;
 position: absolute;
 bottom: 0;
-
+background-image: url('img/Group\ 1.png');
+background-repeat: no-repeat;
+background-size: cover;
 }
 .clipboard-list {
 height: 50px; 
@@ -148,8 +157,8 @@ height: auto;
 padding: 0 5px;
 }
 .fire {
-height: auto;
-width: auto;
+height: 50px;
+width: 43px;
 }
 .min-maranata {
 color: var(--black);
@@ -159,6 +168,7 @@ font-weight: 100;
 letter-spacing: 0;
 line-height: normal;
 margin-bottom: 1px;
+color:#D3A92E;
 }
 .title {
 align-self: flex-start;
@@ -269,8 +279,13 @@ margin-bottom: 60px;
   }
   .carousel-inner {
     width: 70%;
+    height: 290px;
     margin-left: auto;
     margin-right: auto;
+    background-image: url('img/WhatsApp\ Image\ 2023-12-04\ at\ 16.17\ 1.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
   }
   .banner_rolate {
     width: 100%;
