--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ height: 100vh;
 }
 #versao{ 
   font-size: 11px;
-  margin: -10px 0 -10px -150px;
+  margin: -10px 0 -10px -120px;
   color: #c7c7c7;
 }
 .hidden,
@@ -36,9 +36,10 @@ visibility: hidden;
 width: 100%;
 height: 150px;
 min-height: auto;
-box-shadow: 0px 4px 4px #00000040;
 margin-top: 20px;
 max-height: 50vh;
+box-shadow: 0px 4px 1cap
+ #00000040;
 }
 .no-despreze-a-sua-m {
 letter-spacing: 0;
@@ -50,13 +51,12 @@ text-align: center;
 font-family: 'Playball', cursive;
 font-size: 18px;
 color: #fff;
-text-shadow: 1px 1px 4px #000;
+text-shadow: 2px 2px 10px #000;
 }
 .overlap-group {
 align-items: flex-end;
 background-color: var(--alto);
 border-radius: 20px;
-box-shadow: 0px 4px 4px #00000040;
 display: flex;
 flex-direction: column;
 gap: 20px;
@@ -69,7 +69,7 @@ width: 100%;
 align-items: flex-end; align-self: center;
 background-color:#D3A92E;
 color: #fff;
-box-shadow: 0px 4px 4px #80008840;
+box-shadow: 2px 4px 4px #000000a9;
 display: flex;
 padding: 8px 10px;
 font-size: 11px;
